homework/5.kubernetes-network/redmine/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-dep-redmine
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: my-app-redmine
  template:
    metadata:
      labels:
        app: my-app-redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
