homework/5.kubernetes-network/redmine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  namespace: l5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
