homework/5.kubernetes-network/redmine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
